--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "eslint-plugin-import": "^2.21.2"
     },
     "dependencies": {
-        "axios": "^0.19.2",
-        "cheerio": "^1.0.0-rc.3"
+        "axios": "^0.19.2"
     }
 }
