--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
         "eslint-plugin-import": "^2.21.2"
     },
     "dependencies": {
-        "axios": "^0.19.2",
-        "cors": "^2.8.5",
-        "ws": "^7.3.0"
+        "axios": "^0.19.2"
     }
 }
