--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
-        "ws": "^7.3.0"
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "socket.io": "^2.3.0"
     }
 }
